--- a/docs/style.css
+++ b/docs/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?lq5ybl');
-  src:  url('fonts/icomoon.eot?lq5ybl#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?lq5ybl') format('truetype'),
-    url('fonts/icomoon.woff?lq5ybl') format('woff'),
-    url('fonts/icomoon.svg?lq5ybl#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?f54jzx');
+  src:  url('fonts/icomoon.eot?f54jzx#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?f54jzx') format('truetype'),
+    url('fonts/icomoon.woff?f54jzx') format('woff'),
+    url('fonts/icomoon.svg?f54jzx#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -41,140 +41,142 @@
 .icon-stormboard-building:before {
   content: "\e904";
 }
-.icon-stormboard-category:before {
+.icon-stormboard-caret-down-fill:before {
   content: "\e905";
 }
-.icon-stormboard-circle-drawing:before {
+.icon-stormboard-category:before {
   content: "\e906";
+}
+.icon-stormboard-circle-drawing:before {
+  content: "\e907";
   color: #2f4966;
 }
 .icon-stormboard-cloud-lightning-rain:before {
-  content: "\e907";
-}
-.icon-stormboard-cloud-rain-heavy-fill:before {
   content: "\e908";
 }
-.icon-stormboard-curve-drawing:before {
+.icon-stormboard-cloud-rain-heavy-fill:before {
   content: "\e909";
+}
+.icon-stormboard-curve-drawing:before {
+  content: "\e90a";
   color: #2f4966;
 }
 .icon-stormboard-customer-search .path1:before {
-  content: "\e90a";
+  content: "\e90b";
   color: rgb(224, 169, 14);
 }
 .icon-stormboard-customer-search .path2:before {
-  content: "\e90b";
+  content: "\e90c";
   margin-left: -1.0498046875em;
   color: rgb(47, 73, 102);
 }
 .icon-stormboard-customer-search .path3:before {
-  content: "\e90c";
+  content: "\e90d";
   margin-left: -1.0498046875em;
   color: rgb(224, 169, 14);
 }
 .icon-stormboard-files:before {
-  content: "\e90d";
-}
-.icon-stormboard-full-screen:before {
   content: "\e90e";
-  color: #2f4966;
 }
-.icon-stormboard-geo:before {
+.icon-stormboard-fullscreen:before {
   content: "\e90f";
 }
-.icon-stormboard-gust:before {
+.icon-stormboard-geo:before {
   content: "\e910";
 }
-.icon-stormboard-hotspots:before {
+.icon-stormboard-gust:before {
   content: "\e911";
 }
-.icon-stormboard-house-door:before {
+.icon-stormboard-hotspots:before {
   content: "\e912";
 }
-.icon-stormboard-info-circle:before {
+.icon-stormboard-house-door:before {
   content: "\e913";
 }
-.icon-stormboard-layers:before {
+.icon-stormboard-info-circle:before {
   content: "\e914";
 }
-.icon-stormboard-lightning:before {
+.icon-stormboard-layers:before {
   content: "\e915";
 }
-.icon-stormboard-lightning-earth-pulse:before {
+.icon-stormboard-lightning:before {
   content: "\e916";
+}
+.icon-stormboard-lightning-earth-pulse:before {
+  content: "\e917";
   color: #2f4966;
 }
 .icon-stormboard-lightning-fill:before {
-  content: "\e917";
+  content: "\e918";
 }
 .icon-stormboard-lightning-gld:before {
-  content: "\e918";
-  color: #2f4966;
-}
-.icon-stormboard-lightning-rindat:before {
   content: "\e919";
   color: #2f4966;
 }
-.icon-stormboard-pencil:before {
+.icon-stormboard-lightning-rindat:before {
   content: "\e91a";
+  color: #2f4966;
 }
-.icon-stormboard-person:before {
+.icon-stormboard-pencil:before {
   content: "\e91b";
 }
-.icon-stormboard-polygon-drawing:before {
+.icon-stormboard-person:before {
   content: "\e91c";
+}
+.icon-stormboard-polygon-drawing:before {
+  content: "\e91d";
   color: #2f4966;
 }
 .icon-stormboard-radar:before {
-  content: "\e91d";
+  content: "\e91e";
 }
 .icon-stormboard-radar-cascavel:before {
-  content: "\e91e";
-  color: #2f4966;
-}
-.icon-stormboard-radar-general-mosaic:before {
   content: "\e91f";
   color: #2f4966;
 }
-.icon-stormboard-radar-teixeira-soares:before {
+.icon-stormboard-radar-general-mosaic:before {
   content: "\e920";
   color: #2f4966;
 }
-.icon-stormboard-report:before {
+.icon-stormboard-radar-teixeira-soares:before {
   content: "\e921";
-}
-.icon-stormboard-satellite:before {
-  content: "\e922";
   color: #2f4966;
 }
-.icon-stormboard-satellite-geocolor:before {
+.icon-stormboard-report:before {
+  content: "\e922";
+}
+.icon-stormboard-satellite:before {
   content: "\e923";
   color: #2f4966;
 }
-.icon-stormboard-satellite-infra-red:before {
+.icon-stormboard-satellite-geocolor:before {
   content: "\e924";
   color: #2f4966;
 }
-.icon-stormboard-satellite-visible:before {
+.icon-stormboard-satellite-infra-red:before {
   content: "\e925";
   color: #2f4966;
 }
-.icon-stormboard-square-drawing:before {
+.icon-stormboard-satellite-visible:before {
   content: "\e926";
   color: #2f4966;
 }
-.icon-stormboard-station-data:before {
+.icon-stormboard-square-drawing:before {
   content: "\e927";
   color: #2f4966;
 }
-.icon-stormboard-wind:before {
+.icon-stormboard-station-data:before {
   content: "\e928";
+  color: #2f4966;
+}
+.icon-stormboard-wind:before {
+  content: "\e929";
 }
 .icon-stormboard-zoom-in:before {
-  content: "\e929";
+  content: "\e92a";
   color: #2f4966;
 }
 .icon-stormboard-zoom-out:before {
-  content: "\e92a";
+  content: "\e92b";
   color: #2f4966;
 }
