--- a/docs/style.css
+++ b/docs/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'stormboard';
-  src:  url('fonts/stormboard.eot?ewxbcw');
-  src:  url('fonts/stormboard.eot?ewxbcw#iefix') format('embedded-opentype'),
-    url('fonts/stormboard.ttf?ewxbcw') format('truetype'),
-    url('fonts/stormboard.woff?ewxbcw') format('woff'),
-    url('fonts/stormboard.svg?ewxbcw#stormboard') format('svg');
+  src:  url('fonts/stormboard.eot?detkik');
+  src:  url('fonts/stormboard.eot?detkik#iefix') format('embedded-opentype'),
+    url('fonts/stormboard.ttf?detkik') format('truetype'),
+    url('fonts/stormboard.woff?detkik') format('woff'),
+    url('fonts/stormboard.svg?detkik#stormboard') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -61,122 +61,101 @@
   content: "\e90a";
   color: #2f4966;
 }
-.icon-stormboard-customer-search .path1:before {
+.icon-stormboard-customer-search:before {
   content: "\e90b";
-  color: rgb(224, 169, 14);
-}
-.icon-stormboard-customer-search .path2:before {
-  content: "\e90c";
-  margin-left: -1.0498046875em;
-  color: rgb(47, 73, 102);
-}
-.icon-stormboard-customer-search .path3:before {
-  content: "\e90d";
-  margin-left: -1.0498046875em;
-  color: rgb(224, 169, 14);
 }
 .icon-stormboard-files:before {
-  content: "\e90e";
+  content: "\e90c";
 }
 .icon-stormboard-fullscreen:before {
-  content: "\e90f";
+  content: "\e90d";
 }
 .icon-stormboard-geo:before {
-  content: "\e910";
+  content: "\e90e";
 }
 .icon-stormboard-gust:before {
-  content: "\e911";
+  content: "\e90f";
 }
 .icon-stormboard-hotspots:before {
-  content: "\e912";
+  content: "\e910";
 }
 .icon-stormboard-house-door:before {
-  content: "\e913";
+  content: "\e911";
 }
 .icon-stormboard-info-circle:before {
-  content: "\e914";
+  content: "\e912";
 }
 .icon-stormboard-layers:before {
-  content: "\e915";
+  content: "\e913";
 }
 .icon-stormboard-lightning:before {
-  content: "\e916";
+  content: "\e914";
 }
 .icon-stormboard-lightning-earth-pulse:before {
-  content: "\e917";
-  color: #2f4966;
+  content: "\e915";
 }
 .icon-stormboard-lightning-fill:before {
-  content: "\e918";
+  content: "\e916";
 }
 .icon-stormboard-lightning-gld:before {
-  content: "\e919";
-  color: #2f4966;
+  content: "\e917";
 }
 .icon-stormboard-lightning-rindat:before {
-  content: "\e91a";
-  color: #2f4966;
+  content: "\e918";
 }
 .icon-stormboard-pencil:before {
-  content: "\e91b";
+  content: "\e919";
 }
 .icon-stormboard-person:before {
-  content: "\e91c";
+  content: "\e91a";
 }
 .icon-stormboard-polygon-drawing:before {
-  content: "\e91d";
+  content: "\e91b";
   color: #2f4966;
 }
 .icon-stormboard-radar:before {
-  content: "\e91e";
+  content: "\e91c";
 }
 .icon-stormboard-radar-cascavel:before {
-  content: "\e91f";
-  color: #2f4966;
+  content: "\e91d";
 }
 .icon-stormboard-radar-general-mosaic:before {
-  content: "\e920";
-  color: #2f4966;
+  content: "\e91e";
 }
 .icon-stormboard-radar-teixeira-soares:before {
+  content: "\e91f";
+}
+.icon-stormboard-report:before {
+  content: "\e920";
+}
+.icon-stormboard-satellite:before {
   content: "\e921";
   color: #2f4966;
 }
-.icon-stormboard-report:before {
-  content: "\e922";
-}
-.icon-stormboard-satellite:before {
-  content: "\e923";
-  color: #2f4966;
-}
 .icon-stormboard-satellite-geocolor:before {
-  content: "\e924";
+  content: "\e922";
   color: #2f4966;
 }
 .icon-stormboard-satellite-infra-red:before {
+  content: "\e923";
+}
+.icon-stormboard-satellite-visible:before {
+  content: "\e924";
+}
+.icon-stormboard-square-drawing:before {
   content: "\e925";
   color: #2f4966;
 }
-.icon-stormboard-satellite-visible:before {
+.icon-stormboard-station-data:before {
   content: "\e926";
   color: #2f4966;
 }
-.icon-stormboard-square-drawing:before {
-  content: "\e927";
-  color: #2f4966;
-}
-.icon-stormboard-station-data:before {
-  content: "\e928";
-  color: #2f4966;
-}
 .icon-stormboard-wind:before {
-  content: "\e929";
+  content: "\e927";
 }
 .icon-stormboard-zoom-in:before {
-  content: "\e92a";
-  color: #2f4966;
+  content: "\e928";
 }
 .icon-stormboard-zoom-out:before {
-  content: "\e92b";
-  color: #2f4966;
+  content: "\e929";
 }
