--- a/docs/style.css
+++ b/docs/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'stormboard';
-  src:  url('fonts/stormboard.eot?2jgyr4');
-  src:  url('fonts/stormboard.eot?2jgyr4#iefix') format('embedded-opentype'),
-    url('fonts/stormboard.ttf?2jgyr4') format('truetype'),
-    url('fonts/stormboard.woff?2jgyr4') format('woff'),
-    url('fonts/stormboard.svg?2jgyr4#stormboard') format('svg');
+  src:  url('fonts/stormboard.eot?y0t3l2');
+  src:  url('fonts/stormboard.eot?y0t3l2#iefix') format('embedded-opentype'),
+    url('fonts/stormboard.ttf?y0t3l2') format('truetype'),
+    url('fonts/stormboard.woff?y0t3l2') format('woff'),
+    url('fonts/stormboard.svg?y0t3l2#stormboard') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -50,84 +50,84 @@
 .icon-stormboard-bounding-box:before {
   content: "\e907";
 }
-.icon-stormboard-building:before {
+.icon-stormboard-brightness-high:before {
   content: "\e908";
 }
-.icon-stormboard-calendar-event:before {
+.icon-stormboard-brightness-high-fill:before {
   content: "\e909";
 }
-.icon-stormboard-caret-down-fill:before {
+.icon-stormboard-building:before {
   content: "\e90a";
 }
-.icon-stormboard-category:before {
+.icon-stormboard-calendar-event:before {
   content: "\e90b";
 }
-.icon-stormboard-circle-drawing:before {
+.icon-stormboard-caret-down-fill:before {
   content: "\e90c";
+}
+.icon-stormboard-category:before {
+  content: "\e90d";
+}
+.icon-stormboard-circle-drawing:before {
+  content: "\e90e";
   color: #2f4966;
 }
 .icon-stormboard-clock:before {
-  content: "\e90d";
-}
-.icon-stormboard-cloud-lightning-rain:before {
-  content: "\e90e";
-}
-.icon-stormboard-cloud-rain-heavy-fill:before {
   content: "\e90f";
 }
-.icon-stormboard-curve-drawing:before {
+.icon-stormboard-cloud-lightning-rain:before {
   content: "\e910";
+}
+.icon-stormboard-cloud-rain-heavy-fill:before {
+  content: "\e911";
+}
+.icon-stormboard-curve-drawing:before {
+  content: "\e912";
   color: #2f4966;
 }
 .icon-stormboard-customer-search:before {
-  content: "\e911";
-}
-.icon-stormboard-delete:before {
-  content: "\e912";
-}
-.icon-stormboard-eye:before {
   content: "\e913";
 }
-.icon-stormboard-eye-slash:before {
+.icon-stormboard-delete:before {
   content: "\e914";
 }
-.icon-stormboard-files:before {
+.icon-stormboard-eye:before {
   content: "\e915";
 }
-.icon-stormboard-fullscreen:before {
+.icon-stormboard-eye-slash:before {
   content: "\e916";
 }
-.icon-stormboard-geo:before {
+.icon-stormboard-files:before {
   content: "\e917";
 }
-.icon-stormboard-gust:before {
+.icon-stormboard-fullscreen:before {
   content: "\e918";
 }
-.icon-stormboard-hotspots:before {
+.icon-stormboard-geo:before {
   content: "\e919";
 }
-.icon-stormboard-house-door:before {
+.icon-stormboard-gust:before {
   content: "\e91a";
 }
-.icon-stormboard-info-circle:before {
+.icon-stormboard-hotspots:before {
   content: "\e91b";
 }
-.icon-stormboard-layers:before {
+.icon-stormboard-house-door:before {
   content: "\e91c";
 }
-.icon-stormboard-lightning:before {
+.icon-stormboard-info-circle:before {
   content: "\e91d";
 }
-.icon-stormboard-lightning-earth-pulse:before {
+.icon-stormboard-layers:before {
   content: "\e91e";
 }
-.icon-stormboard-lightning-fill:before {
+.icon-stormboard-lightning:before {
   content: "\e91f";
 }
-.icon-stormboard-lightning-gld:before {
+.icon-stormboard-lightning-fill:before {
   content: "\e920";
 }
-.icon-stormboard-lightning-rindat:before {
+.icon-stormboard-pause-circle-fill:before {
   content: "\e921";
 }
 .icon-stormboard-pencil:before {
@@ -139,62 +139,49 @@
 .icon-stormboard-person:before {
   content: "\e924";
 }
-.icon-stormboard-polygon-drawing:before {
+.icon-stormboard-play-circle-fill:before {
   content: "\e925";
+}
+.icon-stormboard-polygon-drawing:before {
+  content: "\e926";
   color: #2f4966;
 }
 .icon-stormboard-radar:before {
-  content: "\e926";
-}
-.icon-stormboard-radar-cascavel:before {
   content: "\e927";
 }
-.icon-stormboard-radar-general-mosaic:before {
+.icon-stormboard-report:before {
   content: "\e928";
 }
-.icon-stormboard-radar-teixeira-soares:before {
+.icon-stormboard-satellite:before {
   content: "\e929";
+  color: #2f4966;
 }
-.icon-stormboard-report:before {
+.icon-stormboard-send:before {
   content: "\e92a";
 }
-.icon-stormboard-satellite:before {
+.icon-stormboard-square-drawing:before {
   content: "\e92b";
   color: #2f4966;
 }
-.icon-stormboard-satellite-geocolor:before {
+.icon-stormboard-station-data:before {
   content: "\e92c";
   color: #2f4966;
 }
-.icon-stormboard-satellite-infra-red:before {
+.icon-stormboard-stop-circle-fill:before {
   content: "\e92d";
 }
-.icon-stormboard-satellite-visible:before {
+.icon-stormboard-three-dots-vertical:before {
   content: "\e92e";
 }
-.icon-stormboard-send:before {
+.icon-stormboard-trash-solid:before {
   content: "\e92f";
 }
-.icon-stormboard-square-drawing:before {
-  content: "\e930";
-  color: #2f4966;
-}
-.icon-stormboard-station-data:before {
-  content: "\e931";
-  color: #2f4966;
-}
-.icon-stormboard-three-dots-vertical:before {
-  content: "\e932";
-}
-.icon-stormboard-trash-solid:before {
-  content: "\e933";
-}
 .icon-stormboard-wind:before {
-  content: "\e934";
+  content: "\e930";
 }
 .icon-stormboard-zoom-in:before {
-  content: "\e935";
+  content: "\e931";
 }
 .icon-stormboard-zoom-out:before {
-  content: "\e936";
+  content: "\e932";
 }
