--- a/docs/style.css
+++ b/docs/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'stormboard';
-  src:  url('fonts/stormboard.eot?y0t3l2');
-  src:  url('fonts/stormboard.eot?y0t3l2#iefix') format('embedded-opentype'),
-    url('fonts/stormboard.ttf?y0t3l2') format('truetype'),
-    url('fonts/stormboard.woff?y0t3l2') format('woff'),
-    url('fonts/stormboard.svg?y0t3l2#stormboard') format('svg');
+  src:  url('fonts/stormboard.eot?nq23of');
+  src:  url('fonts/stormboard.eot?nq23of#iefix') format('embedded-opentype'),
+    url('fonts/stormboard.ttf?nq23of') format('truetype'),
+    url('fonts/stormboard.woff?nq23of') format('woff'),
+    url('fonts/stormboard.svg?nq23of#stormboard') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -28,160 +28,187 @@
 .icon-stormboard-arraw-offset:before {
   content: "\e900";
 }
-.icon-stormboard-arrow-left-box:before {
+.icon-stormboard-arrow-clockwise:before {
   content: "\e901";
 }
-.icon-stormboard-arrow-left-circle-fill:before {
+.icon-stormboard-arrow-left-box:before {
   content: "\e902";
 }
-.icon-stormboard-arrow-open:before {
+.icon-stormboard-arrow-left-circle-fill:before {
   content: "\e903";
+}
+.icon-stormboard-arrow-open:before {
+  content: "\e904";
   color: #2f4966;
 }
 .icon-stormboard-arrow-repeat:before {
-  content: "\e904";
-}
-.icon-stormboard-arrow-right-circle-fill:before {
   content: "\e905";
 }
-.icon-stormboard-arrow-right-thin:before {
+.icon-stormboard-arrow-right-circle-fill:before {
   content: "\e906";
 }
-.icon-stormboard-bounding-box:before {
+.icon-stormboard-arrow-right-thin:before {
   content: "\e907";
 }
-.icon-stormboard-brightness-high:before {
+.icon-stormboard-bounding-box:before {
   content: "\e908";
 }
-.icon-stormboard-brightness-high-fill:before {
+.icon-stormboard-brightness-high:before {
   content: "\e909";
 }
-.icon-stormboard-building:before {
+.icon-stormboard-brightness-high-fill:before {
   content: "\e90a";
 }
-.icon-stormboard-calendar-event:before {
+.icon-stormboard-building:before {
   content: "\e90b";
 }
-.icon-stormboard-caret-down-fill:before {
+.icon-stormboard-calendar-event:before {
   content: "\e90c";
 }
-.icon-stormboard-category:before {
+.icon-stormboard-caret-down-fill:before {
   content: "\e90d";
 }
-.icon-stormboard-circle-drawing:before {
+.icon-stormboard-category:before {
   content: "\e90e";
+}
+.icon-stormboard-check:before {
+  content: "\e90f";
+}
+.icon-stormboard-circle-drawing:before {
+  content: "\e910";
   color: #2f4966;
 }
 .icon-stormboard-clock:before {
-  content: "\e90f";
-}
-.icon-stormboard-cloud-lightning-rain:before {
-  content: "\e910";
-}
-.icon-stormboard-cloud-rain-heavy-fill:before {
   content: "\e911";
 }
-.icon-stormboard-curve-drawing:before {
+.icon-stormboard-close:before {
   content: "\e912";
+}
+.icon-stormboard-cloud-lightning-rain:before {
+  content: "\e913";
+}
+.icon-stormboard-cloud-rain-heavy-fill:before {
+  content: "\e914";
+}
+.icon-stormboard-curve-drawing:before {
+  content: "\e915";
   color: #2f4966;
 }
 .icon-stormboard-customer-search:before {
-  content: "\e913";
-}
-.icon-stormboard-delete:before {
-  content: "\e914";
-}
-.icon-stormboard-eye:before {
-  content: "\e915";
-}
-.icon-stormboard-eye-slash:before {
   content: "\e916";
 }
-.icon-stormboard-files:before {
+.icon-stormboard-delete:before {
   content: "\e917";
 }
-.icon-stormboard-fullscreen:before {
+.icon-stormboard-exclamation-circle-fill:before {
   content: "\e918";
 }
-.icon-stormboard-geo:before {
+.icon-stormboard-eye:before {
   content: "\e919";
 }
-.icon-stormboard-gust:before {
+.icon-stormboard-eye-slash:before {
   content: "\e91a";
 }
-.icon-stormboard-hotspots:before {
+.icon-stormboard-files:before {
   content: "\e91b";
 }
-.icon-stormboard-house-door:before {
+.icon-stormboard-fullscreen:before {
   content: "\e91c";
 }
-.icon-stormboard-info-circle:before {
+.icon-stormboard-geo:before {
   content: "\e91d";
 }
-.icon-stormboard-layers:before {
+.icon-stormboard-gust:before {
   content: "\e91e";
 }
-.icon-stormboard-lightning:before {
+.icon-stormboard-hotspots:before {
   content: "\e91f";
 }
-.icon-stormboard-lightning-fill:before {
+.icon-stormboard-house-door:before {
   content: "\e920";
 }
-.icon-stormboard-pause-circle-fill:before {
+.icon-stormboard-info-circle:before {
   content: "\e921";
 }
-.icon-stormboard-pencil:before {
+.icon-stormboard-layers:before {
   content: "\e922";
 }
-.icon-stormboard-pencil-square:before {
+.icon-stormboard-lightning:before {
   content: "\e923";
 }
-.icon-stormboard-person:before {
+.icon-stormboard-lightning-fill:before {
   content: "\e924";
 }
-.icon-stormboard-play-circle-fill:before {
+.icon-stormboard-map:before {
   content: "\e925";
 }
-.icon-stormboard-polygon-drawing:before {
+.icon-stormboard-paperclip:before {
   content: "\e926";
-  color: #2f4966;
 }
-.icon-stormboard-radar:before {
+.icon-stormboard-pause-circle-fill:before {
   content: "\e927";
 }
-.icon-stormboard-report:before {
+.icon-stormboard-pencil:before {
   content: "\e928";
 }
-.icon-stormboard-satellite:before {
+.icon-stormboard-pencil-square:before {
   content: "\e929";
-  color: #2f4966;
 }
-.icon-stormboard-send:before {
+.icon-stormboard-person:before {
   content: "\e92a";
 }
-.icon-stormboard-square-drawing:before {
+.icon-stormboard-play-circle-fill:before {
   content: "\e92b";
-  color: #2f4966;
 }
-.icon-stormboard-station-data:before {
+.icon-stormboard-polygon-drawing:before {
   content: "\e92c";
   color: #2f4966;
 }
-.icon-stormboard-stop-circle-fill:before {
+.icon-stormboard-radar:before {
   content: "\e92d";
 }
-.icon-stormboard-three-dots-vertical:before {
+.icon-stormboard-report:before {
   content: "\e92e";
 }
-.icon-stormboard-trash-solid:before {
+.icon-stormboard-satellite:before {
   content: "\e92f";
+  color: #2f4966;
 }
-.icon-stormboard-wind:before {
+.icon-stormboard-screenshot:before {
   content: "\e930";
 }
-.icon-stormboard-zoom-in:before {
+.icon-stormboard-search:before {
   content: "\e931";
 }
-.icon-stormboard-zoom-out:before {
+.icon-stormboard-send:before {
   content: "\e932";
+}
+.icon-stormboard-square-drawing:before {
+  content: "\e933";
+  color: #2f4966;
+}
+.icon-stormboard-station-data:before {
+  content: "\e934";
+  color: #2f4966;
+}
+.icon-stormboard-stop-circle-fill:before {
+  content: "\e935";
+}
+.icon-stormboard-three-dots-vertical:before {
+  content: "\e936";
+}
+.icon-stormboard-transmission-line:before {
+  content: "\e937";
+}
+.icon-stormboard-trash-solid:before {
+  content: "\e938";
+}
+.icon-stormboard-wind:before {
+  content: "\e939";
+}
+.icon-stormboard-zoom-in:before {
+  content: "\e93a";
+}
+.icon-stormboard-zoom-out:before {
+  content: "\e93b";
 }
