--- a/docs/style.css
+++ b/docs/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'stormboard';
-  src:  url('fonts/stormboard.eot?7y180y');
-  src:  url('fonts/stormboard.eot?7y180y#iefix') format('embedded-opentype'),
-    url('fonts/stormboard.ttf?7y180y') format('truetype'),
-    url('fonts/stormboard.woff?7y180y') format('woff'),
-    url('fonts/stormboard.svg?7y180y#stormboard') format('svg');
+  src:  url('fonts/stormboard.eot?ow8r8p');
+  src:  url('fonts/stormboard.eot?ow8r8p#iefix') format('embedded-opentype'),
+    url('fonts/stormboard.ttf?ow8r8p') format('truetype'),
+    url('fonts/stormboard.woff?ow8r8p') format('woff'),
+    url('fonts/stormboard.svg?ow8r8p#stormboard') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -136,109 +136,112 @@
 .icon-stormboard-info-circle:before {
   content: "\e923";
 }
-.icon-stormboard-layers:before {
+.icon-stormboard-intracloud-lightning:before {
   content: "\e924";
 }
-.icon-stormboard-lightning:before {
+.icon-stormboard-layers:before {
   content: "\e925";
 }
-.icon-stormboard-lightning-fill:before {
+.icon-stormboard-lightning:before {
   content: "\e926";
 }
-.icon-stormboard-map:before {
+.icon-stormboard-lightning-fill:before {
   content: "\e927";
 }
-.icon-stormboard-palette-solid:before {
+.icon-stormboard-map:before {
   content: "\e928";
 }
-.icon-stormboard-paperclip:before {
+.icon-stormboard-palette-solid:before {
   content: "\e929";
 }
-.icon-stormboard-pause-circle-fill:before {
+.icon-stormboard-paperclip:before {
   content: "\e92a";
 }
-.icon-stormboard-pencil:before {
+.icon-stormboard-pause-circle-fill:before {
   content: "\e92b";
 }
-.icon-stormboard-pencil-fill:before {
+.icon-stormboard-pencil:before {
   content: "\e92c";
 }
-.icon-stormboard-pencil-square:before {
+.icon-stormboard-pencil-fill:before {
   content: "\e92d";
 }
-.icon-stormboard-people:before {
+.icon-stormboard-pencil-square:before {
   content: "\e92e";
 }
-.icon-stormboard-person:before {
+.icon-stormboard-people:before {
   content: "\e92f";
 }
-.icon-stormboard-play-circle-fill:before {
+.icon-stormboard-person:before {
   content: "\e930";
 }
-.icon-stormboard-point:before {
+.icon-stormboard-play-circle-fill:before {
   content: "\e931";
 }
-.icon-stormboard-polygon:before {
+.icon-stormboard-point:before {
   content: "\e932";
 }
-.icon-stormboard-polygon-drawing:before {
+.icon-stormboard-polygon:before {
   content: "\e933";
+}
+.icon-stormboard-polygon-drawing:before {
+  content: "\e934";
   color: #2f4966;
 }
 .icon-stormboard-radar:before {
-  content: "\e934";
-}
-.icon-stormboard-report:before {
   content: "\e935";
 }
-.icon-stormboard-satellite:before {
+.icon-stormboard-report:before {
   content: "\e936";
+}
+.icon-stormboard-satellite:before {
+  content: "\e937";
   color: #2f4966;
 }
 .icon-stormboard-screenshot:before {
-  content: "\e937";
-}
-.icon-stormboard-search:before {
   content: "\e938";
 }
-.icon-stormboard-send:before {
+.icon-stormboard-search:before {
   content: "\e939";
 }
-.icon-stormboard-square-drawing:before {
+.icon-stormboard-send:before {
   content: "\e93a";
-  color: #2f4966;
 }
-.icon-stormboard-station-data:before {
+.icon-stormboard-square-drawing:before {
   content: "\e93b";
   color: #2f4966;
 }
-.icon-stormboard-stop-circle-fill:before {
+.icon-stormboard-station-data:before {
   content: "\e93c";
+  color: #2f4966;
 }
-.icon-stormboard-targets:before {
+.icon-stormboard-stop-circle-fill:before {
   content: "\e93d";
 }
-.icon-stormboard-three-dots-vertical:before {
+.icon-stormboard-targets:before {
   content: "\e93e";
 }
-.icon-stormboard-transmission-line:before {
+.icon-stormboard-three-dots-vertical:before {
   content: "\e93f";
 }
-.icon-stormboard-trash-solid:before {
+.icon-stormboard-transmission-line:before {
   content: "\e940";
 }
-.icon-stormboard-warning:before {
+.icon-stormboard-trash-solid:before {
   content: "\e941";
 }
-.icon-stormboard-wind:before {
+.icon-stormboard-warning:before {
   content: "\e942";
 }
-.icon-stormboard-x-circle-fill:before {
+.icon-stormboard-wind:before {
   content: "\e943";
 }
-.icon-stormboard-zoom-in:before {
+.icon-stormboard-x-circle-fill:before {
   content: "\e944";
 }
-.icon-stormboard-zoom-out:before {
+.icon-stormboard-zoom-in:before {
   content: "\e945";
+}
+.icon-stormboard-zoom-out:before {
+  content: "\e946";
 }
